[gd_scene load_steps=7 format=3 uid="uid://ctcq8wmlla6vp"]

[ext_resource type="Script" path="res://UI/Menus/charecterSelection.gd" id="1_e4hgk"]
[ext_resource type="Texture2D" uid="uid://4k3aarp23v4v" path="res://player/textures/Noodle.png" id="1_ocqvl"]
[ext_resource type="Texture2D" uid="uid://d0pdt8ol7ukv2" path="res://player/textures/Green_Noodle.png" id="2_6wclm"]
[ext_resource type="Texture2D" uid="uid://chnykpqt4i7ms" path="res://player/textures/Red_Noodle.png" id="3_7tkkt"]
[ext_resource type="Texture2D" uid="uid://bsrs8pyakmqcs" path="res://player/textures/Blue_Noodle.png" id="4_065kx"]
[ext_resource type="Theme" uid="uid://dqt8ckud00u6" path="res://UI/new_theme.tres" id="5_akybh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4hgk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="purp" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("1_ocqvl")

[node name="green" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("2_6wclm")

[node name="red" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("3_7tkkt")

[node name="blue" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("4_065kx")

[node name="gray" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_akybh")

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/purp" to="." method="_on_purp_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/gray" to="." method="_on_gray_pressed"]
